option java_outer_classname = "ClusterMessageProto";

message ClusterMessage{
	optional string msgId = 1;
	optional string senderUserName = 2;
	optional string receiverUserName = 3;
	optional string msgText = 4;
	optional string msgImageName = 5;
	optional bytes msgImageBits = 6;

	enum MessageType
	{
	 	 REQUEST = 0;
	 	 SUCCESS = 1;

    }
    optional MessageType messageType = 7 [default = SUCCESS];
}